unpackaged/main/default/objects/pcify__Log__c/pcify__Log__c.object-meta.xml
<CustomObject>
    <description>Dev Logging</description>
    <label>Log</label>
    <nameField>
        <displayFormat>Log-{0000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>