unpackaged/main/default/objects/pcify__Log__c/fields/pcify__Category__c.field-meta.xml
<CustomField>
    <fullName>pcify__Category__c</fullName>
    <description>What is the classification for the log</description>
    <inlineHelpText>What is the classification for the log</inlineHelpText>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>