unpackaged/main/default/objects/pcify__Log__c/fields/pcify__ConfidenceRating__c.field-meta.xml
<CustomField>
    <fullName>pcify__ConfidenceRating__c</fullName>
    <description>Confidence Rating for PCIFY Detection Event.</description>
    <formula>IF(pcify__PatternMatch__c == TRUE &amp;&amp; pcify__LuhnValid__c == TRUE, &#39;High&#39;,
IF(pcify__PatternMatch__c == TRUE &amp;&amp; pcify__LuhnValid__c == FALSE, &#39;Medium&#39;,
IF(pcify__FalsePositive__c == TRUE, &#39;Medium&#39;,
&#39;&#39;
)))</formula>
    <inlineHelpText>Confidence Rating for PCIFY Detection Event.</inlineHelpText>
    <label>Confidence Rating</label>
    <type>Text</type>
</CustomField>