unpackaged/main/default/objects/pcify__Log__c/fields/pcify__CreditCardDetected__c.field-meta.xml
<CustomField>
    <fullName>pcify__CreditCardDetected__c</fullName>
    <description>TRUE if a credit card number was detected.</description>
    <formula>pcify__LuhnValid__c</formula>
    <inlineHelpText>TRUE if a credit card number was detected.</inlineHelpText>
    <label>Credit Card Detected</label>
    <type>Checkbox</type>
</CustomField>