unpackaged/main/default/objects/pcify__Log__c/fields/pcify__CreditCardsDetected__c.field-meta.xml
<CustomField>
    <fullName>pcify__CreditCardsDetected__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Only used for creating summary reports.</description>
    <inlineHelpText>Only used for creating summary reports.</inlineHelpText>
    <label>Credit Cards Detected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>