unpackaged/main/default/objects/pcify__Log__c/fields/pcify__Exception__c.field-meta.xml
<CustomField>
    <fullName>pcify__Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the log a debug or an exception?</description>
    <inlineHelpText>Is the log a debug or an exception?</inlineHelpText>
    <label>Exception</label>
    <type>Checkbox</type>
</CustomField>