unpackaged/main/default/objects/pcify__Log__c/fields/pcify__FalsePositive__c.field-meta.xml
<CustomField>
    <fullName>pcify__FalsePositive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Record has been flagged as a False Positive.</description>
    <inlineHelpText>Record has been flagged as a False Positive.</inlineHelpText>
    <label>False Positive</label>
    <type>Checkbox</type>
</CustomField>