unpackaged/main/default/objects/pcify__Log__c/fields/pcify__Field__c.field-meta.xml
<CustomField>
    <fullName>pcify__Field__c</fullName>
    <description>Salesforce Field which was flagged for PII by PCIFY.</description>
    <inlineHelpText>Salesforce Field which was flagged for PII by PCIFY.</inlineHelpText>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>