unpackaged/main/default/objects/pcify__Log__c/fields/pcify__Large_Description__c.field-meta.xml
<CustomField>
    <fullName>pcify__Large_Description__c</fullName>
    <description>Complete exception message or debug message</description>
    <inlineHelpText>Complete exception message or debug message</inlineHelpText>
    <label>Large Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>