unpackaged/main/default/objects/pcify__Log__c/fields/pcify__LogType__c.field-meta.xml
<CustomField>
    <fullName>pcify__LogType__c</fullName>
    <description>Type of PCIFY Log</description>
    <formula>IF( CONTAINS(pcify__Category__c, &#39;Mask&#39;) &amp;&amp; !CONTAINS(pcify__Category__c, &#39;Audit&#39;) , &#39;Mask&#39;,
IF( CONTAINS(pcify__Category__c, &#39;Report&#39;) &amp;&amp; !CONTAINS(pcify__Category__c, &#39;Audit&#39;), &#39;Report&#39;,
IF( CONTAINS(pcify__Category__c, &#39;Delete&#39;) &amp;&amp; !CONTAINS(pcify__Category__c, &#39;Audit&#39;), &#39;Delete&#39;,
IF( CONTAINS(pcify__Category__c, &#39;Debug&#39;), &#39;Debug&#39;,
&#39;Debug&#39;
))))</formula>
    <inlineHelpText>Type of PCIFY Log</inlineHelpText>
    <label>Log Type</label>
    <type>Text</type>
</CustomField>