unpackaged/main/default/objects/pcify__Log__c/fields/pcify__LuhnValid__c.field-meta.xml
<CustomField>
    <fullName>pcify__LuhnValid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>String passed the Luhn Algorithm.</description>
    <inlineHelpText>String passed the Luhn Algorithm.</inlineHelpText>
    <label>Luhn Valid</label>
    <type>Checkbox</type>
</CustomField>