unpackaged/main/default/objects/pcify__Log__c/fields/pcify__Object__c.field-meta.xml
<CustomField>
    <fullName>pcify__Object__c</fullName>
    <description>Object type where log is originating from</description>
    <inlineHelpText>Object type where log is originating from</inlineHelpText>
    <label>Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>