unpackaged/main/default/objects/pcify__Log__c/fields/pcify__Origin__c.field-meta.xml
<CustomField>
    <fullName>pcify__Origin__c</fullName>
    <description>Apex Class and Method which initiate the log</description>
    <inlineHelpText>Apex Class and Method which initiate the log</inlineHelpText>
    <label>Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>