unpackaged/main/default/objects/pcify__Log__c/fields/pcify__Pattern__c.field-meta.xml
<CustomField>
    <fullName>pcify__Pattern__c</fullName>
    <description>The Detection Pattern which was matched by PCIFY.</description>
    <inlineHelpText>The Detection Pattern which was matched by PCIFY.</inlineHelpText>
    <label>Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>