unpackaged/main/default/objects/pcify__Log__c/fields/pcify__PatternMatch__c.field-meta.xml
<CustomField>
    <fullName>pcify__PatternMatch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>String matches a known Detection Pattern.</description>
    <inlineHelpText>String matches a known Detection Pattern.</inlineHelpText>
    <label>Pattern Match</label>
    <type>Checkbox</type>
</CustomField>