unpackaged/main/default/objects/pcify__Log__c/fields/pcify__Record__c.field-meta.xml
<CustomField>
    <fullName>pcify__Record__c</fullName>
    <description>Link to record with credit card number detected.</description>
    <formula>HYPERLINK(&#39;/&#39;+ pcify__RecordId__c,  pcify__RecordId__c , &#39;_blank&#39;)</formula>
    <inlineHelpText>Link to record with credit card number detected.</inlineHelpText>
    <label>Record</label>
    <type>Text</type>
</CustomField>