unpackaged/main/default/objects/pcify__Log__c/fields/pcify__RecordCount__c.field-meta.xml
<CustomField>
    <fullName>pcify__RecordCount__c</fullName>
    <description>This field has been deprecated in version 1.19</description>
    <inlineHelpText>This field has been deprecated in version 1.19</inlineHelpText>
    <label>Record Count [DEPRECATED]</label>
    <length>18</length>
    <type>Text</type>
</CustomField>