unpackaged/main/default/objects/pcify__Log__c/fields/pcify__RecordId__c.field-meta.xml
<CustomField>
    <fullName>pcify__RecordId__c</fullName>
    <description>Id of the record</description>
    <inlineHelpText>Id of the record</inlineHelpText>
    <label>RecordId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>