unpackaged/main/default/objects/pcify__Log__c/fields/pcify__Summary__c.field-meta.xml
<CustomField>
    <fullName>pcify__Summary__c</fullName>
    <description>Short description of the log</description>
    <inlineHelpText>Short description of the log</inlineHelpText>
    <label>Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>