unpackaged/main/default/objects/pcify__Log__c/fields/pcify__Timestamp__c.field-meta.xml
<CustomField>
    <fullName>pcify__Timestamp__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Timestamp for the log</description>
    <inlineHelpText>Timestamp for the log</inlineHelpText>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>