unpackaged/main/default/objects/pcify__Log__c/listViews/pcify__All.listView-meta.xml
<ListView>
    <fullName>pcify__All</fullName>
    <columns>NAME</columns>
    <columns>pcify__Record__c</columns>
    <columns>pcify__Category__c</columns>
    <columns>pcify__Pattern__c</columns>
    <columns>pcify__Large_Description__c</columns>
    <columns>pcify__Field__c</columns>
    <columns>pcify__Object__c</columns>
    <columns>pcify__Origin__c</columns>
    <columns>pcify__Timestamp__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>